--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         .card-text img { max-width: 100%; height: auto; display: inline-block; margin: 5px; border-radius: 8px; vertical-align: middle; }
 
         .buttons { display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; }
-        .button { padding: 15px 30px; border: none; border-radius: 10px; font-size: 16px; font-weight: 600; cursor: pointer; transition: all 0.3s ease; color: white; flex: 1; min-width: 150px; }
+        button { padding: 15px 30px; border: none; border-radius: 10px; font-size: 16px; font-weight: 600; cursor: pointer; transition: all 0.3s ease; color: white; flex: 1; min-width: 150px; }
         .btn-known { background: linear-gradient(135deg, var(--accent) 0%, var(--accent-2) 100%); }
         .btn-partial { background: linear-gradient(135deg, var(--partial) 0%, #f7b733 100%); }
         .btn-unknown { background: linear-gradient(135deg, var(--danger) 0%, #ee5a6f 100%); }
