--- a/index.html
+++ b/index.html
@@ -1434,7 +1434,7 @@
                     <button class="btn-new-list" onclick="showNewListModal()">➕ Créer une nouvelle liste</button>
                 </div>
             </div>
-            <div id="manageCardsPage" class="page">
+            <div id="managePage" class="page">
                 <div class="container manage-cards-page">
                     <div class="breadcrumb"><a id="backToLists">← Retour aux listes</a></div>
                     <h2 id="manageTitle">Gérer les cartes</h2>
