--- a/index.html
+++ b/index.html
@@ -3730,16 +3730,16 @@
         }
 
         function exitFullscreen() {
-	// 1) fermer TON overlay "plein écran"
-	const fullscreenMode = document.getElementById('fullscreenMode');
-	if (fullscreenMode) fullscreenMode.classList.remove('active');
-	document.body.style.overflow = 'auto';
+  // Ferme ton overlay "plein écran" (div)
+  			const fullscreenMode = document.getElementById('fullscreenMode');
+  			if (fullscreenMode) fullscreenMode.classList.remove('active');
+  			document.body.style.overflow = 'auto';
 
-	// 2) si (et seulement si) le navigateur est réellement en Fullscreen API
-	if (document.fullscreenElement) {
-		document.exitFullscreen().catch(() => {});
-	}
-}    
+  // Ne tente la Fullscreen API que si elle est active
+  			if (document.fullscreenElement) {
+    		document.exitFullscreen().catch(() => {});
+ 		 }
+		}  
 
         function flipFullscreenCard() {
             const fullscreenCard = document.getElementById('fullscreenCard');
