--- a/index.html
+++ b/index.html
@@ -1552,6 +1552,7 @@
                     <!-- Barre de progression ajoutée ici -->
                     <div class="progress-bar">
                         <div class="progress-fill" id="progress-fill"></div>
+					</div>
 						<div class="review-options" id="importanceFilterUI">
   							<h4>🎯 Filtrer par importance</h4>
   							<div class="filter-buttons" style="justify-content:flex-start">
