--- a/index.html
+++ b/index.html
@@ -1577,10 +1577,25 @@
 						<div class="review-options" id="importanceFilterUI">
   							<h4>🎯 Filtrer par importance</h4>
   							<div class="filter-buttons" style="justify-content:flex-start">
-   								<label class="filter-btn important"><input type="checkbox" id="filterImpImportant" checked> Important</label>
-    							<label class="filter-btn normal"><input type="checkbox" id="filterImpNormal" checked> Normal</label>
-    							<label class="filter-btn pas-important"><input type="checkbox" id="filterImpPasImportant" checked> Pas important</label>
-    							<label class="filter-btn explication"><input type="checkbox" id="filterImpExplication" checked> Explication</label>
+   								<label class="filter-btn important">
+									<input type="checkbox" id="filterImpImportant" checked>
+									Imp. <span id="countImpImportant" class="count">(0)</span>
+								</label>
+
+								<label class="filter-btn normal">
+									<input type="checkbox" id="filterImpNormal" checked>
+									Norm. <span id="countImpNormal" class="count">(0)</span>
+								</label>
+
+								<label class="filter-btn pas-important">
+									<input type="checkbox" id="filterImpPasImportant" checked>
+									Pas imp. <span id="countImpPasImportant" class="count">(0)</span>
+								</label>
+
+								<label class="filter-btn explication">
+									<input type="checkbox" id="filterImpExplication" checked>
+									Expl. <span id="countImpExplication" class="count">(0)</span>
+								</label>
     							<button class="btn-action btn-action-secondary" onclick="applyImportanceFilter()">Appliquer</button>
   							</div>
 						</div>
@@ -3077,6 +3092,7 @@
             }
 
             const cards = categories[currentCategory][currentFolder][currentList];
+			updateImportanceCounts(cards);
             if (!cards || cards.length === 0) {
                 document.getElementById('emptyState').style.display = 'block';
                 document.getElementById('cardSection').style.display = 'none';
@@ -3121,6 +3137,30 @@
             document.getElementById('studyTitle').textContent = currentList;
             document.getElementById('studyModeIndicator').style.display = 'none';
         }
+
+		function normalizeImportance(v) {
+			return (v || 'normal').toLowerCase().trim();
+		}
+
+		function updateImportanceCounts(cards) {
+			const counts = { important: 0, normal: 0, 'pas important': 0, explication: 0 };
+
+		for (const c of cards) {
+			const imp = normalizeImportance(c.importance);
+			if (counts[imp] !== undefined) counts[imp]++;
+			else counts.normal++; // fallback si valeur bizarre
+		}
+
+		const set = (id, n) => {
+			const el = document.getElementById(id);
+			if (el) el.textContent = `(${n})`;
+		};
+
+		set('countImpImportant', counts.important);
+		set('countImpNormal', counts.normal);
+		set('countImpPasImportant', counts['pas important']);
+		set('countImpExplication', counts.explication);
+	}
 
         function showCard() {
             const cards = categories[currentCategory][currentFolder][currentList];
