--- a/index.html
+++ b/index.html
@@ -3114,15 +3114,35 @@
 			const ui = document.getElementById("importanceFilterUI");
 			if (ui) {
   			   ui.innerHTML = `
-    			<h4>🎯 Filtrer par importance</h4>
-    			<div class="filter-buttons" style="justify-content:flex-start; gap:8px; flex-wrap:wrap">
-      				<label class="filter-btn important"><input type="checkbox" id="filterImpImportant" checked> Important</label>
-      				<label class="filter-btn normal"><input type="checkbox" id="filterImpNormal" checked> Normal</label>
-      				<label class="filter-btn pas-important"><input type="checkbox" id="filterImpPasImportant" checked> Pas important</label>
-      				<label class="filter-btn explication"><input type="checkbox" id="filterImpExplication" checked> Explication</label>
-      				<button class="btn-action btn-action-secondary" style="padding:8px 12px; font-size:13px" onclick="applyImportanceFilter()">Appliquer</button>
-    			</div>
-  			`;
+    			document.getElementById("importanceFilterUI").innerHTML = `
+  					<h4>🎯 Filtrer par importance</h4>
+ 					<div class="filter-buttons" style="justify-content:flex-start; gap:8px; flex-wrap:wrap">
+    					<label class="filter-btn important">
+      						<input type="checkbox" id="filterImportant" checked>
+      						Important (<span id="countImpImportant">0</span>)
+    					</label>
+
+    					<label class="filter-btn normal">
+      						<input type="checkbox" id="filterNormal" checked>
+      						Normal (<span id="countImpNormal">0</span>)
+    					</label>
+
+    					<label class="filter-btn pas-important">
+      						<input type="checkbox" id="filterNotImportant" checked>
+     						Pas important (<span id="countImpNotImportant">0</span>)
+    					</label>
+
+    					<label class="filter-btn explication">
+      						<input type="checkbox" id="filterExplanation" checked>
+      						Explication (<span id="countImpExplanation">0</span>)
+					    </label>
+
+    					<button class="btn-action btn-action-secondary" style="padding:8px 12px; font-size:13px;"
+      						onclick="applyImportanceFilter()">
+      						Appliquer
+    					</button>
+  					</div>
+				`;
 			}
 
             currentIndex = 0;
